--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,6 +42,7 @@
         android:layout_marginTop="320dp"
         android:layout_marginEnd="162dp"
         android:layout_marginBottom="363dp"
+        android:onClick="onLogin"
         android:text="@string/authenticate"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
