--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,12 +22,13 @@
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="259dp"
+        android:layout_height="227dp"
         android:layout_marginStart="142dp"
         android:layout_marginTop="110dp"
         android:layout_marginEnd="141dp"
         android:layout_marginBottom="82dp"
+        android:contentDescription="@string/imgDesc"
         app:layout_constraintBottom_toTopOf="@+id/getImgBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
